--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,3 +1,6 @@
-<p>
-  about works!
+<h1 class="animated fadeIn fast">Sobre Comic App </h1>
+
+<hr>
+<p class="animated fadeIn">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore doloremque explicabo necessitatibus impedit, omnis quae laboriosam illum quidem commodi numquam perferendis id velit tempora beatae obcaecati recusandae itaque dolorum? Cumque.
 </p>
